@@ -6,6 +6,7 @@
   * Add Object#__clone
   * Add Object#superclass
   * build_function_call supports calling instance methods
+  * Add Delegator (incomplete)
 
 2009-03-16 - Sean Huber (shuber@huberry.com)
   * Add Struct class
